# sbpv3

./: .env  .gitignore  Cargo.toml  LICENSE  fix-abort-error.py  package-lock.json  package.json
src/: db.rs  error.rs  main.rs  state.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/masterpegawai/: route.ts
src/app/api/masterpegawai/[...slug]/: route.ts
src/app/api/masterpegawai/[pegawai_id]/: route.ts
src/app/dashboard/: page.tsx
src/app/dashboard/absensi/: absensiTypes.ts  absensiUtils.ts  page.tsx
src/app/dashboard/keuangan/invoice/: page.tsx
src/app/dashboard/pegawai/: page.tsx
src/app/dashboard/stokgudang/: InventoryDashboardClient.tsx  page.tsx  types.ts  utils.ts
src/app/dashboard/suratjalan/: page.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/components/: AuthCard.tsx  DataSuratJalan.tsx  InputField.tsx  SubmitButton.tsx
src/components/layout/: Footer.tsx  Header.tsx  Sidebar.tsx
src/lib/: api.ts
src/lib/print/: slip-gaji.ts  slip-kasbon.ts
src/models/: absensi.rs  invoice.rs  invoice_pembayaran.rs  kasbon.rs  kasbon_mutasi.rs  kontrak_kerja.rs  masterpegawai.rs  mod.rs  penggajian.rs  product.rs  retur.rs  satuan.rs  stok.rs  surat_jalan.rs  surat_jalan_items.rs  suratjalan.rs  user.rs
src/routes/: absensi.rs  auth.rs  invoice.rs  invoice_pembayaran.rs  kasbon.rs  kasbon_mutasi.rs  kontrak_kerja.rs  masterpegawai.rs  mod.rs  penggajian.rs  product.rs  retur.rs  satuan.rs  stok.rs  surat_jalan.rs  suratjalan.rs  ws.rs
src/types/: auth.ts
src/utils/: jwt.rs
src/utils/suratjalan/: pdfGenerator.ts
(+26 files in other folders)
