[package]
name = "sbpappv3-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-web-actors = "4"
actix = "0.13"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "macros"
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

bcrypt = "0.15"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }

dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
env_logger = "0.11"
log = "0.4"

